--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@hookform/resolvers": "^5.0.1",
+    "@maskito/core": "^3.7.2",
+    "@maskito/kit": "^3.7.2",
+    "@maskito/react": "^3.7.2",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -24,10 +27,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.10",
-    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.3",
@@ -37,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -45,6 +51,8 @@
     "react-hook-form": "^7.55.0",
     "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
