--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         host: 162.240.159.68
         username: root
-        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        password: ${{ secrets.DEPLOY_PASS }}
         port: 22022
         source: "dist/*"
         target: "/home/adminassociacaoa/public_html"
