--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,5 @@ jobs:
         target: "/home/adminassociacaoa/public_html"
         source: "dist/*"
         strip_components: 1
+        script: |
+              rm -rf /home/adminassociacaoa/public_html/assets/*
