--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm run build
 
     - name: Deploy via SCP (SFTP)
-      uses: appleboy/ssh-action@v0.1.4
+      uses: appleboy/scp-action@v0.1.4
       with:
         host: 162.240.159.68
         username: root
@@ -33,12 +33,20 @@ jobs:
         target: "/home/adminassociacaoa/public_html"
         source: "dist/*"
         strip_components: 1
+    - name: Recompilar e reiniciar Apache via SSH
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: 162.240.159.68
+        username: root
+        password: ${{ secrets.DEPLOY_PASS }}
+        port: 22022
         script: |
-          echo "Recompilando Apache config..."
+          echo "Recompilando configs do Apache..."
           /scripts/rebuildhttpdconf
     
-          echo "Reiniciando Apache com WHM script..."
+          echo "Reiniciando Apache com WHM..."
           /scripts/restartsrv_httpd
     
-          echo "Forçando restart manual do Apache (extra segurança)..."
+          echo "Forçando restart via systemctl..."
           sudo systemctl restart httpd
+
